[project]
name = "risksim"
version = "1.0.0"
description = "Risk-Return and Asset Correlation Simulator"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — handled by formatter where practical
]

[tool.ruff.lint.per-file-ignores]
"pages/*.py" = ["E402"]  # module-level imports not at top (Streamlit pages)

[tool.pytest.ini_options]
testpaths = ["tests"]
